Revision history for Catalyst-Plugin-Statsd.

{{$NEXT}}

v0.9.0    2024-07-23 19:37:56+01:00 Europe/London
  [Enhancements]
  - Internals changed to use newer Perl syntax features.

  [Incompatible Changes]
  - Perl v5.20 or later is required, matching Plack::Middleware::Statsd v0.7.0 changes.

  [Documentation]
  - Update copyright year.

v0.8.2    2023-06-22 12:36:45+01:00 Europe/London
  [Tests]
  - Added required module for tests to work around broken CPAN Testers environments.

v0.8.1    2023-06-08 20:06:25+01:00 Europe/London
  [Documentation]
  - Documented the Perl version support policy.

  - Updated copyright year.

  [Toolchain]
  - Sign the distribution.

v0.8.0    2022-07-27 12:36:43+01:00 Europe/London
  [Incompatable Changes]
  - Minimum Perl version is v5.14, due to changes in Plack::Middleware::Statsd.

  [Documentation]
  - Updated copyright year.

  - Fixed encoding of links in README.

  [Toolchain]
  - Updated MANIFEST.SKIP.

v0.7.2    2020-07-31 14:31:11+01:00 Europe/London
  [Toolchain]
  - Add core modules in the prerequisites.

v0.7.1    2020-03-11 17:35:06+00:00 Europe/London
  [Documentation]
  - Added KNOWN ISSUE about large databases when profiling, #3

v0.7.0    2020-03-11 17:22:14+00:00 Europe/London
  [Enhancements]
  - Logs the sessionid for counting unique sessions, #4

v0.6.3    2019-07-17 17:43:18+01:00 Europe/London
  [Documentation]
  - Fixed minor POD typo.

v0.6.2    2019-07-14 14:37:43+01:00 Europe/London
  [Documentation]
  - Adjusted case of ABSTRACT.

  - Added missing import to SYNOPSIS.

  - Added Net::Statsd::Tiny to SEE ALSO.

  - Added info about the statsd_client method.

v0.6.1    2019-06-01 14:34:40+01:00 Europe/London
  [Documentation]
  - Fixed typo.

v0.6.0    2019-06-01 09:58:43+01:00 Europe/London
  [Bug Fixes]
  - Hyphens in metric names are no longer escaped to dots.

    This could be considered an Incompatible Change if you were relying
    in this behaviour.

  [Documentation]